Add unit tests